--- a/index.html
+++ b/index.html
@@ -11,41 +11,80 @@
             font-family: Arial, sans-serif;
             text-align: center;
             margin: 0;
-            padding: 20px;
+            overflow: hidden;
         }
-        .container {
-            max-width: 800px;
-            margin: auto;
+        canvas {
+            position: absolute;
+            top: 0;
+            left: 0;
         }
-        .project {
-            background: #222;
-            padding: 20px;
-            margin: 15px 0;
+        .car {
+            position: absolute;
+            bottom: 50px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100px;
+            animation: moveCar 5s linear forwards;
+        }
+        @keyframes moveCar {
+            0% { bottom: 50px; }
+            100% { bottom: 300px; }
+        }
+        .road-container {
+            position: absolute;
+            top: 300px;
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+        }
+        .road {
+            width: 30%;
+            height: 300px;
+            background: linear-gradient(to bottom, gray, black);
             border-radius: 10px;
-            transition: transform 0.3s ease-in-out;
+            position: relative;
         }
-        .project:hover {
-            transform: scale(1.05);
-        }
-        a {
-            color: #61dafb;
-            text-decoration: none;
+        .black-hole {
+            width: 80px;
+            height: 80px;
+            background: radial-gradient(circle, black, transparent);
+            border-radius: 50%;
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Sai Kumar P's Portfolio</h1>
-        <div class="project">
-            <h2>Power BI Investor Dashboard</h2>
-            <p>A real-time dashboard for a 1 MW solar farm with Excel integration.</p>
-            <a href="https://github.com/yourusername/solar-dashboard" target="_blank">View on GitHub</a>
+    <canvas id="spaceCanvas"></canvas>
+    <img src="car.png" class="car" alt="Car">
+    <div class="road-container">
+        <div class="road">
+            <div class="black-hole" onclick="location.href='education.html'"></div>
         </div>
-        <div class="project">
-            <h2>Real-time Dash Cam Streaming</h2>
-            <p>A cloud-based streaming service for dash cam footage.</p>
-            <a href="https://github.com/yourusername/dashcam-streaming" target="_blank">View on GitHub</a>
+        <div class="road">
+            <div class="black-hole" onclick="location.href='projects.html'"></div>
+        </div>
+        <div class="road">
+            <div class="black-hole" onclick="location.href='experience.html'"></div>
         </div>
     </div>
+    <script>
+        const canvas = document.getElementById("spaceCanvas");
+        const ctx = canvas.getContext("2d");
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+        function drawStars() {
+            ctx.fillStyle = "white";
+            for (let i = 0; i < 100; i++) {
+                let x = Math.random() * canvas.width;
+                let y = Math.random() * canvas.height;
+                ctx.fillRect(x, y, 2, 2);
+            }
+        }
+        drawStars();
+    </script>
 </body>
 </html>
