--- a/index.html
+++ b/index.html
@@ -1,92 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sai Kumar P's Portfolio</title>
-    <style>
-        body {
-            background-color: black;
-            color: white;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            overflow: hidden;
-        }
-        canvas {
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
-        .car {
-            position: absolute;
-            bottom: 50px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 100px;
-            animation: moveCar 5s linear forwards;
-        }
-        @keyframes moveCar {
-            0% { bottom: 50px; }
-            100% { bottom: 300px; }
-        }
-        .road-container {
-            position: absolute;
-            top: 300px;
-            width: 100%;
-            display: flex;
-            justify-content: space-around;
-        }
-        .road {
-            width: 30%;
-            height: 300px;
-            background: linear-gradient(to bottom, gray, black);
-            border-radius: 10px;
-            position: relative;
-        }
-        .black-hole {
-            width: 80px;
-            height: 80px;
-            background: radial-gradient(circle, black, transparent);
-            border-radius: 50%;
-            position: absolute;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            cursor: pointer;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>3D Portfolio</title>
+  <style>
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; }
+  </style>
 </head>
 <body>
-    <canvas id="spaceCanvas"></canvas>
-    <img src="car.png" class="car" alt="Car">
-    <div class="road-container">
-        <div class="road">
-            <div class="black-hole" onclick="location.href='education.html'"></div>
-        </div>
-        <div class="road">
-            <div class="black-hole" onclick="location.href='projects.html'"></div>
-        </div>
-        <div class="road">
-            <div class="black-hole" onclick="location.href='experience.html'"></div>
-        </div>
-    </div>
-    <script>
-        const canvas = document.getElementById("spaceCanvas");
-        const ctx = canvas.getContext("2d");
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
-        function drawStars() {
-            ctx.fillStyle = "white";
-            for (let i = 0; i < 100; i++) {
-                let x = Math.random() * canvas.width;
-                let y = Math.random() * canvas.height;
-                ctx.fillRect(x, y, 2, 2);
-            }
-        }
-        drawStars();
-    </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.min.js"></script>
+
+  <script>
+    // Set up scene
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    const renderer = new THREE.WebGLRenderer();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
+
+    // Create car (can be a 3D model or simple geometry)
+    const carGeometry = new THREE.BoxGeometry(1, 0.5, 2);
+    const carMaterial = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
+    const car = new THREE.Mesh(carGeometry, carMaterial);
+    scene.add(car);
+
+    // Create road (using TubeGeometry)
+    const path = new THREE.CurvePath();
+    path.add(new THREE.LineCurve3(new THREE.Vector3(0, 0, 0), new THREE.Vector3(50, 0, 0)));
+    const roadGeometry = new THREE.TubeGeometry(path, 100, 1, 8, false);
+    const roadMaterial = new THREE.MeshBasicMaterial({ color: 0x555555 });
+    const road = new THREE.Mesh(roadGeometry, roadMaterial);
+    scene.add(road);
+
+    // Create black holes
+    function createBlackHole(x, y, z) {
+      const blackHoleGeometry = new THREE.SphereGeometry(5, 32, 32);
+      const blackHoleMaterial = new THREE.MeshBasicMaterial({ color: 0x000000, emissive: 0x222222, emissiveIntensity: 1 });
+      const blackHole = new THREE.Mesh(blackHoleGeometry, blackHoleMaterial);
+      blackHole.position.set(x, y, z);
+      scene.add(blackHole);
+      return blackHole;
+    }
+
+    const blackHole1 = createBlackHole(30, 0, 0);
+    const blackHole2 = createBlackHole(60, 0, 20);
+    const blackHole3 = createBlackHole(90, 0, -20);
+
+    // Add lights
+    const ambientLight = new THREE.AmbientLight(0x404040);
+    scene.add(ambientLight);
+
+    const pointLight = new THREE.PointLight(0xffffff, 1, 100);
+    camera.add(pointLight);
+
+    // Animate car along the road
+    let carProgress = 0;
+    function animateCar() {
+      carProgress += 0.05;
+      const t = carProgress % 1;
+      car.position.set(path.getPointAt(t).x, 0, path.getPointAt(t).z);
+    }
+
+    // Camera movement for black hole transition
+    function moveCameraToBlackHole(target) {
+      const targetPos = target.position.clone();
+      new TWEEN.Tween(camera.position)
+        .to(targetPos, 1000)
+        .easing(TWEEN.Easing.Quadratic.InOut)
+        .start();
+    }
+
+    // Raycasting for interactivity
+    const raycaster = new THREE.Raycaster();
+    const mouse = new THREE.Vector2();
+
+    window.addEventListener('mousemove', (event) => {
+      mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
+      mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
+    });
+
+    function detectHover() {
+      raycaster.update();
+      const intersects = raycaster.intersectObjects([blackHole1, blackHole2, blackHole3]);
+      if (intersects.length > 0) {
+        moveCameraToBlackHole(intersects[0].object);
+      }
+    }
+
+    // Render loop
+    function animate() {
+      requestAnimationFrame(animate);
+      animateCar();
+      detectHover();
+      renderer.render(scene, camera);
+    }
+
+    animate();
+  </script>
 </body>
 </html>
-
-
