--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#features">Features</a></li>
+                    <li><a href="#capabilities">Capabilities</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -25,28 +25,31 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="container">
-            <h1>Accelerating Human Discovery with AI</h1>
-            <p>Building artificial intelligence to advance our understanding of the universe.</p>
-            <button id="learnMoreBtn">Learn More</button>
+            <h1 class="fade-in">Accelerating Human Discovery with AI</h1>
+            <p class="fade-in-delay">Building artificial intelligence to advance our understanding of the universe.</p>
+            <button id="learnMoreBtn" class="pulse">Learn More</button>
         </div>
     </section>
 
-    <!-- Features Section -->
-    <section id="features" class="features">
+    <!-- Capabilities Section -->
+    <section id="capabilities" class="capabilities">
         <div class="container">
-            <h2>Our Capabilities</h2>
-            <div class="feature-grid">
-                <div class="feature-card">
+            <h2 class="slide-up">Our Capabilities</h2>
+            <div class="capability-grid">
+                <div class="capability-card orbit">
                     <h3>AI Research</h3>
-                    <p>Pushing the boundaries of artificial intelligence.</p>
+                    <p>Exploring uncharted territories of intelligence with cutting-edge algorithms.</p>
+                    <div class="glow"></div>
                 </div>
-                <div class="feature-card">
+                <div class="capability-card orbit">
                     <h3>Data Analysis</h3>
-                    <p>Unlocking insights from complex datasets.</p>
+                    <p>Transforming raw data into cosmic insights with AI precision.</p>
+                    <div class="glow"></div>
                 </div>
-                <div class="feature-card">
+                <div class="capability-card orbit">
                     <h3>Scalable Solutions</h3>
-                    <p>Deploying AI at scale for real-world impact.</p>
+                    <p>Launching AI into orbit—scalable systems for universal impact.</p>
+                    <div class="glow"></div>
                 </div>
             </div>
         </div>
@@ -55,7 +58,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 XAI Clone. All rights reserved.</p>
+            <p>© 2025 XAI Clone. All rights reserved.</p>
         </div>
     </footer>
 
