--- a/index.html
+++ b/index.html
@@ -36,20 +36,14 @@
         <div class="container">
             <h2 class="slide-up">Our Capabilities</h2>
             <div class="capability-grid">
-                <div class="capability-card orbit">
-                    <h3>AI Research</h3>
-                    <p>Exploring uncharted territories of intelligence with cutting-edge algorithms.</p>
-                    <div class="glow"></div>
+                <div class="capability-card">
+                    <canvas class="three-canvas" data-title="AI Research" data-desc="Exploring uncharted territories of intelligence with cutting-edge algorithms."></canvas>
                 </div>
-                <div class="capability-card orbit">
-                    <h3>Data Analysis</h3>
-                    <p>Transforming raw data into cosmic insights with AI precision.</p>
-                    <div class="glow"></div>
+                <div class="capability-card">
+                    <canvas class="three-canvas" data-title="Data Analysis" data-desc="Transforming raw data into cosmic insights with AI precision."></canvas>
                 </div>
-                <div class="capability-card orbit">
-                    <h3>Scalable Solutions</h3>
-                    <p>Launching AI into orbit—scalable systems for universal impact.</p>
-                    <div class="glow"></div>
+                <div class="capability-card">
+                    <canvas class="three-canvas" data-title="Scalable Solutions" data-desc="Launching AI into orbit—scalable systems for universal impact."></canvas>
                 </div>
             </div>
         </div>
@@ -62,6 +56,8 @@
         </div>
     </footer>
 
+    <!-- Three.js from CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
